--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   cached_network_image: ^3.4.1
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
