--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app wants to access your Library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app wants to access your Camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app wants to access your Microphone</string>
 </dict>
 </plist>
