--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   cached_network_image: ^3.4.1
   intl_phone_field: ^3.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +22,4 @@ flutter:
   uses-material-design: true
   assets:
     - atul/
+    - images/
