--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cached_network_image: ^3.4.1
   intl_phone_field: ^3.2.0
   image_picker: ^1.1.2
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
