--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   image_picker: ^1.1.2
   intl: ^0.20.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
