--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.1
   font_awesome_flutter: ^10.8.0
+  shared_preferences: ^2.3.0
 
 dev_dependencies:
   flutter_test:
