--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   intl: ^0.20.1
   font_awesome_flutter: ^10.8.0
   shared_preferences: ^2.3.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
