--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   shared_preferences: ^2.3.0
   http: ^1.2.2
+  url_launcher: ^6.3.1
+
 
 dev_dependencies:
   flutter_test:
