--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   shared_preferences: ^2.3.0
   http: ^1.2.2
   url_launcher: ^6.3.1
-
+  location: ^7.0.1
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
