--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   url_launcher: ^6.3.1
   location: ^7.0.1
   app_settings: ^5.1.1
+  infinite_scroll_pagination: ^4.1.0
 
 dev_dependencies:
   flutter_test:
