--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   location: ^7.0.1
   app_settings: ^5.1.1
   infinite_scroll_pagination: ^4.1.0
+  firebase_core: ^3.10.0
+  firebase_messaging: ^15.2.0
 
 dev_dependencies:
   flutter_test:
