--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   infinite_scroll_pagination: ^4.1.0
   firebase_core: ^3.10.0
   firebase_messaging: ^15.2.0
+  flutter_local_notifications: ^17.2.3
 
 dev_dependencies:
   flutter_test:
