--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   firebase_messaging: ^15.1.3
   firebase_core: ^3.6.0
   flutter_local_notifications: ^17.2.3
+  google_sign_in: ^6.2.2
+  firebase_auth: ^5.4.1
 
 dev_dependencies:
   flutter_test:
