dio and google maps

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   google_sign_in: ^6.2.2
   firebase_auth: ^5.4.1
   carousel_slider: ^5.0.0
+  dio: ^5.8.0+1
+  google_maps_flutter: ^2.10.0
 
 dev_dependencies:
   flutter_test:
