--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   carousel_slider: ^5.0.0
   dio: ^5.8.0+1
   google_maps_flutter: ^2.10.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
